feat: get comments of movie api
